#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-14
2020-04-23 Mikhail Dubrovin
modified:
   app/jungfrau_dark_proc - clean-up, set correct default parameters
   src/UtilsCalib.py - add more method from UtilsEpix10kaCalib
   src/UtilsEpix10kaCalib.py - move find_file_for_timestamp, calib_group, save_ndarray_in_textfile,
	                       save_2darray_in_textfile to UtilsCalib.py
   src/UtilsJungfrau.py - add shape_from_config_jungfrau
   src/UtilsJungfrauCalib.py - clean-up code for working version
add new:
   app/jungfrau_deploy_constants
   src/UtilsLogging.py - move here initialization of logger

Tag: V02-00-13
2020-04-19 Mikhail Dubrovin
- code refactoring for app/jungfrau_dark_proc
modified:
	app/epix10ka_pedestals_calibration - change format in logging.basicConfig
	examples/test-issues-2021.py - add issue_2021_04_08
	src/GlobalUtils.py - upgrade info_ndarr, print_ndarr
	src/UtilsEpix.py - move out methods set_file_access_mode, create_directory, alias_for_id, id_for_alias
	                   moved to PSCalib.UtilsPanelAlias
	src/UtilsEpix10kaCalib.py - move out methods evaluate_limits, tstamps_run_and_now, tstamp_for_dataset,
	                            xsave_log_record_on_start
	src/UtilsJungfrau.py - cosmetic code cleaning
add new:
	app/jungfrau_dark_proc
	src/UtilsCalib.py
	src/UtilsJungfrauCalib.py

Tag: V02-00-12
2020-03-24 Mikhail Dubrovin
app/det_calib_ave_and_max - fix description in usage
app/epix10ka_images - sage() -> USAGE
examples/test-issues-2021.py - add issue_2021_03_24
UtilsEpix10kaCalib.py - fix finding of the epix10ka gain mode in pvLabels

Tag: V02-00-11
2020-03-22 Mikhail Dubrovin
- UtilsEpix10kaCalib.py - in step_counter use detector name to find pvlbl.value